<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Informed Citizen</string>
    <string name="description">Financial Transparency Into Congress</string>
    <string name="action_settings">Settings</string>
    <string name="enter_state">Enter State</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="first_elected">First Elected:</string>
    <string name="default_string">default string</string>
    <string name="next_election">Next Election:</string>
    <string name="total">Total:</string>
    <string name="spent">Spent:</string>
    <string name="cash">Cash:</string>
    <string name="debt">Debt:</string>
    <string name="lastUpdated">Last Updated:</string>
    <string name="pacs">PACS</string>
    <string name="individual">Individual</string>
    <string name="search">Search</string>
    <string name="ca">CA</string>
    <string name="waitLegislators">Finding Legislators....</string>
    <string name="waitDetail">Loading Details....</string>
    <string name="waitContact">Getting Contact Info....</string>
    <string name="waitSummary">Gathering Politician Summary....</string>
    <string name="waitContr">Gathering Contributors....</string>
    <string name="waitIndust">Gathering Industries....</string>
    <string name="socialMediaInstr">Click to visit their social media sites</string>
    <string name="name">Name:</string>
    <string name="WashingtonDC">Washington DC, 20515</string>
    <string name="home_menu_title">Home</string>

</resources>
