<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SearchActivity">

    <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
    <TextView
        android:id="@+id/app_title"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:alpha="0.35"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/app_desc"
        android:layout_below="@id/app_title"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:text="@string/description"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/state_ll"
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
           android:id="@+id/instructions"
           android:layout_marginBottom="30dp"
           android:textSize="20sp"
           android:text="@string/enter_state"
           android:gravity="center"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1"/>
       <EditText
           android:id="@+id/stateET"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:hint="CA"
           android:gravity="center"
           android:layout_weight="1"/>
       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="Search"
           android:gravity="center"
           android:layout_marginLeft="5dp"
           android:layout_weight="1"
           android:onClick="onSearchClick"/>

     </LinearLayout>

</RelativeLayout>
