<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <TextView
            android:id="@+id/contributorTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_string"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/totalContribTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_string"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"/>
    <LinearLayout
        android:id="@+id/contrBreakdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <LinearLayout
            android:id="@+id/contribPacs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="1">
            <TextView
                android:id="@+id/pacsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pacs"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/pacsDollarsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_string" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/contribIndivid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/IndividualTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/individual"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/individualDollarsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_string" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>