<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <TextView
            android:id="@+id/industryTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_string"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/totalIndustryTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_string"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"/>
    <LinearLayout
        android:id="@+id/industryBreakdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <LinearLayout
            android:id="@+id/industryPacs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="1">
            <TextView
                android:id="@+id/industryPacsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pacs"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/IndustryPacsDollarsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_string" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/industryIndivid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/industryIndividTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/individual"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/industryIndividDollarsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_string" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>